--- a/Frontend/Components/Layout/NavMenu.razor
+++ b/Frontend/Components/Layout/NavMenu.razor
@@ -22,7 +22,7 @@
                 🥇 Talentos
             </NavLink>
             <NavLink class="nav-link" href="user-info">
-                👨‍💼 User Profile
+                👨‍💼 Informações Users
             </NavLink>
             <NavLink class="nav-link" href="SkillManagement">
                 🛠️ Skills
