--- a/Frontend/Components/Pages/AddUsers.razor
+++ b/Frontend/Components/Pages/AddUsers.razor
@@ -1,15 +1,12 @@
 ﻿@page "/add-user"
-
 @using Frontend.Helpers
 @using global::Helpers.Models
-
 @inject ApiHelper ApiHelper
-
 @rendermode InteractiveServer
-<PageTitle>Add User</PageTitle>
+<PageTitle>Adicionar User</PageTitle>
 
 
-<h1>Add User</h1>
+<h1>Adicionar User</h1>
 
 <EditForm Model="@userModel" OnValidSubmit="HandleValidSubmit">
     <DataAnnotationsValidator />
@@ -36,7 +33,7 @@
 
     <div class="mt-3">
         <button type="submit" class="btn btn-primary">Save</button>
-        <NavLink class="btn btn-secondary ms-2" href="user-info">Cancel</NavLink>
+        <NavLink class="btn btn-secondary ms-2" href="user-info">Cancelar</NavLink>
     </div>
 </EditForm>
 
