--- a/Frontend/Components/Pages/UpdateUsersInfo.razor
+++ b/Frontend/Components/Pages/UpdateUsersInfo.razor
@@ -26,7 +26,7 @@ else
 
         <div class="mb-3">
             <label for="password">Nova Password</label>
-            <InputText id="password" @bind-Value="_newPassword" type="password" class="form-control" placeholder="Leave blank to keep current" />
+            <InputText id="password" @bind-Value="_newPassword" type="password" class="form-control" placeholder="Deixar em branco para manter a password atual" />
         </div>
 
         @if (!string.IsNullOrEmpty(_errorMessage))
