--- a/Frontend/Components/Pages/AddUsers.razor
+++ b/Frontend/Components/Pages/AddUsers.razor
@@ -3,6 +3,7 @@
 @using global::Helpers.Models
 @inject ApiHelper ApiHelper
 @rendermode InteractiveServer
+
 <PageTitle>Adicionar User</PageTitle>
 
 
@@ -24,7 +25,7 @@
 
     <div class="form-group">
         <label for="role">Role:</label>
-        <InputSelect id="role" class="form-control" @bind-Value="userModel.RoleId">
+        <InputSelect id="role" class="form-control" @bind-Value="userModel.RoleId" placeholder="Selecionar Role">
             <option value="1">Admin</option>
             <option value="2">UserManager</option>
             <option value="3">User</option>
@@ -32,7 +33,7 @@
     </div>
 
     <div class="mt-3">
-        <button type="submit" class="btn btn-primary">Save</button>
+        <button type="submit" class="btn btn-primary">Guardar</button>
         <NavLink class="btn btn-secondary ms-2" href="user-info">Cancelar</NavLink>
     </div>
 </EditForm>
