--- a/Frontend/Components/Pages/CreateAccount.razor
+++ b/Frontend/Components/Pages/CreateAccount.razor
@@ -72,28 +72,28 @@ userModel      = new CreateUserModel();
 else
 {
 successMessage = null;
-errorMessage   = "Error adding user.";
+errorMessage   = "Erro ao adicionar user.";
 }
 }
 catch (Exception ex)
 {
-errorMessage = $"There has been an error: {ex.Message}";
+errorMessage = $"Ocorreu um erro: {ex.Message}";
 successMessage = null;
 }
 }
 
 public class CreateUserModel
 {
-[Required(ErrorMessage = "Username is required.")]
-[StringLength(50, MinimumLength = 3, ErrorMessage = "Username must be between 3 and 50 characters.")]
+[Required(ErrorMessage = "Username é necessário.")]
+[StringLength(50, MinimumLength = 3, ErrorMessage = "Username deve ter entre 3 e 50 carateres.")]
 public string Username { get; set; }
 
 [Required(ErrorMessage = "Password is required.")]
-[StringLength(100, MinimumLength = 6, ErrorMessage = "Password must be at least 6 characters.")]
+[StringLength(100, MinimumLength = 6, ErrorMessage = "Password tem que ter no minímo 6 carateres.")]
 public string Password { get; set; }
 
-[Required(ErrorMessage = "Please confirm your password.")]
-[Compare(nameof(Password), ErrorMessage = "Passwords do not match.")]
+[Required(ErrorMessage = "Confirme a password.")]
+[Compare(nameof(Password), ErrorMessage = "Passwords não coincidem.")]
 public string ConfirmPassword { get; set; }
 }
 }
